[package]
name = "rusty_wiki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9"
yew = { version = "0.20", features = ["csr"] }
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
log = "0.4.6"
wasm-logger = "0.2.0"
