[package]
name = "rusty_wiki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown-it = "0.4.0"
yew = { version = "0.20", features = ["csr"] }
web-sys = { version = "0.3", default-features=false, features = ["KeyboardEvent", "HtmlElement"] }
lazy_static = "1.4.0"

[profile.release]
panic = 'abort' # less code to include into binary
codegen-units = 1 # optimization over all codebase (slow)
opt-level = 'z' # optimization for size ( more aggressive )
lto = true # link time optimization using using whole-program analysis
